# GlyCONFORMER

./: .dockerignore  .gitignore  DimRed.ipynb  Dockerfile  README.Docker.md  README.md  README.rst  Tutorial_GlyCONFORMER.ipynb  compose.yaml  pyproject.toml  setup.py
.github/workflows/: main.yml
GlyCONFORMER/: plot.py
LIBRARY_GLYCANS/O-glycans/General/O-Core1/: conformations_rest-rect.xtc
LIBRARY_GLYCANS/O-glycans/General/O-Core8/: conformations_rest-rect.xtc
LIBRARY_GLYCANS/O-glycans/Tn_Antigen/: conformations_rest-rect.xtc
TUTORIAL/A2G2S2_example/Conformer_population/: label.txt
bash_scripts/: demux.pl  exchange.sh  sumhills.sh
docs/source/: conf.py  glyconformer.rst  index.rst  modules.rst  src.rst
docs/source/_autosummary/: packages.glycan_conformer.rst  packages.rst
glyconformer/: .nfs0000000001d69795000003a5  __init__.py  glycan_conformer.py  lib.py  lib_app.py  plot.py  process_files.py
src/: __init__.py  glycan_conformer.py  plot.py
streamlit/: app.py  script.js  styles.css
