[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GlyCONFORMER"
version = "1.1.3"
description = "GlyCONFORMERS is a Python package that assigns conformer strings to N-glycan conformers, based on their torsion angle values."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.0"
license = { text = "GPL-3.0 license" }
authors = [
  { name = "Isabell Grothaus", email = "grothaus@uni-bremen.de" }
]
keywords = ["glycan", "conformer", "classification", "sugar", "carbohydrates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy==1.26.4",
    "matplotlib",
    "pandas<=1.3.5",
    "plumed",
    "scipy",
    "wpca",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/IsabellGrothaus/GlyCONFORMER"

[tool.setuptools]
packages = ["glyconformer"]

[tool.setuptools.package-data]
"*" = ["**/*.dat"]
